# pos_t2_aula_fastapi

./: .env.sample  .gitignore  README.md  main.py  pyproject.toml
.github/: pull_request_template.md
api/: main.py  models.py  utils.py
api/docs/: padroes_de_desenvolvimento.md
api/routers/: auth_router.py  juridico_router.py  llm_router.py  operacoes_router.py
samples/: peticao-trabalhista-exemplo.md
